@@ -62,6 +62,7 @@ depth: 1
  * Remove unneeded float styles on 404 page (Fabien Le Frapper)
  * Convert userbar implementation to TypeScript (Albina Starykova)
  * Migrate slug field behaviour to a Stimulus controller and create new `SlugInput` widget (Loveth Omokaro)
+ * Refactor `status` HTML usage to shared template tag (Aman Pandey, LB (Ben) Johnston)
 
 ## Upgrade considerations
 
