@@ -1,4 +1,4 @@
-{% load l10n %}
+{% load l10n wagtailadmin_tags %}
 <td class="{% if column.classname %}{{ column.classname }} {% endif %}title">
     <div class="title-wrapper">
         {% if page.can_choose %}
@@ -11,7 +11,7 @@
             {{ value }}
         {% endif %}
         {% if column.show_locale_labels and page.depth == 2 %}
-            <span class="status-tag status-tag--label">{{ page.locale.get_display_name }}</span>
+            {% status page.locale.get_display_name classname="status-tag--label" %}
         {% endif %}
 
         {% include "wagtailadmin/pages/listing/_privacy_indicator.html" with page=page %}
