@@ -1,5 +1,3 @@
-
-
 {% load i18n wagtailadmin_tags %}
 {% if page_revisions_for_moderation %}
     {% trans "Pages awaiting moderation" as heading %}
@@ -34,7 +32,7 @@
                                 {% i18n_enabled as show_locale_labels %}
                                 {% if show_locale_labels and revision.content_object.locale_id %}
                                     {% locale_label_from_id revision.content_object.locale_id as locale_label %}
-                                    <span class="status-tag status-tag--label">{{ locale_label }}</span>
+                                    {% status locale_label classname="status-tag--label" %}
                                 {% endif %}
                                 {% include "wagtailadmin/pages/listing/_privacy_indicator.html" with page=revision.content_object %}
                                 {% include "wagtailadmin/pages/listing/_locked_indicator.html" with page=revision.content_object %}
