@@ -35,7 +35,7 @@
                                     {% i18n_enabled as show_locale_labels %}
                                     {% if show_locale_labels and obj.locale_id %}
                                         {% locale_label_from_id obj.locale_id as locale_label %}
-                                        <span class="status-tag status-tag--label">{{ locale_label }}</span>
+                                        {% status locale_label classname="status-tag--label" %}
                                     {% endif %}
                                     {% include "wagtailadmin/pages/listing/_privacy_indicator.html" with page=obj %}
                                     {% include "wagtailadmin/pages/listing/_locked_indicator.html" with page=obj %}
