@@ -46,7 +46,7 @@
                             {% i18n_enabled as show_locale_labels %}
                             {% if show_locale_labels and workflow_state.content_object.locale_id %}
                                 {% locale_label_from_id workflow_state.content_object.locale_id as locale_label %}
-                                <span class="status-tag status-tag--label">{{ locale_label }}</span>
+                                {% status locale_label classname="status-tag--label" %}
                             {% endif %}
                         </td>
                         <td>
