@@ -44,14 +44,12 @@
                                 {% i18n_enabled as show_locale_labels %}
                                 {% if show_locale_labels and object.locale_id %}
                                     {% locale_label_from_id object.locale_id as locale_label %}
-                                    <span class="status-tag status-tag--label">{{ locale_label }}</span>
+                                    {% status locale_label classname="status-tag--label" %}
                                 {% endif %}
                             {% endwith %}
                         </td>
                         <td>
-                            <div class="status-tag primary">
-                                {{ task_state.get_status_display }}
-                            </div>
+                            {% status task_state.get_status_display classname="primary" %}
                         </td>
                         <td>{{ task_state.started_at }}</td>
                         <td>{{ task_state.finished_at }}</td>
