@@ -1,18 +1,14 @@
-{% load i18n %}
+{% load i18n wagtailadmin_tags %}
 {% if page.live %}
     {% with page_url=page.url %}
+        {% trans "Current page status:" as status_hidden_label %}
         {% if page_url is not None %}
-            <a href="{{ page_url }}" target="_blank" rel="noreferrer" class="status-tag primary" title="{% trans 'Visit the live page' %}">
-                <span class="visuallyhidden">{% trans "Current page status:" %}</span> {{ page.status_string }}
-            </a>
+            {% trans 'Visit the live page' as status_title %}
+            {% status page.status_string url=page_url title=status_title hidden_label=status_hidden_label classname="primary" attrs='target="_blank" rel="noreferrer"' %}
         {% else %}
-            <span class="status-tag primary">
-                <span class="visuallyhidden">{% trans "Current page status:" %}</span> {{ page.status_string }}
-            </span>
+            {% status page.status_string hidden_label=status_hidden_label classname="primary" %}
         {% endif %}
     {% endwith %}
 {% else %}
-    <span class="status-tag">
-        <span class="visuallyhidden">{% trans "Current page status:" %}</span> {{ page.status_string }}
-    </span>
+    {% status page.status_string hidden_label=status_hidden_label %}
 {% endif %}
