@@ -543,3 +543,77 @@ class IconTagTest(TestCase):
             ),
         ):
             self.assertHTMLEqual(expected, Template(template).render(Context()))
+
+
+class StatusTagTest(TestCase):
+    def test_render_block_component_span_variations(self):
+        template = """
+            {% load wagtailadmin_tags i18n %}
+            {% status "live" classname="primary" %}
+            {% status "live" %}
+            {% trans "hidden translated label" as trans_hidden_label %}
+            {% status "live" hidden_label=trans_hidden_label classname="primary" %}
+            {% status %}
+        """
+
+        expected = """
+            <span class="status-tag primary">live</span>
+            <span class="status-tag">live</span>
+            <span class="status-tag primary"><span class="visuallyhidden">hidden translated label</span>live</span>
+            <span class="status-tag"></span>
+        """
+
+        self.assertHTMLEqual(expected, Template(template).render(Context()))
+
+    def test_render_block_component_anchor_variations(self):
+        template = """
+            {% load wagtailadmin_tags i18n %}
+            {% trans "title" as trans_title %}
+            {% trans "hidden label" as trans_hidden_label %}
+            {% status "live" url="/test-url/" title=trans_title hidden_label=trans_hidden_label classname="primary" attrs='target="_blank" rel="noreferrer"' %}
+            {% status "live" url="/test-url/" title=trans_title classname="primary" %}
+            {% status "live" url="/test-url/" title=trans_title %}
+            {% status  url="/test-url/" title=trans_title attrs='id="my-status"' %}
+        """
+
+        expected = """
+            <a href="/test-url/" class="status-tag primary" title="title" target="_blank" rel="noreferrer">
+                <span class="visuallyhidden">hidden label</span>
+                live
+            </a>
+            <a href="/test-url/" class="status-tag primary" title="title">
+                live
+            </a>
+            <a href="/test-url/" class="status-tag" title="title">
+                live
+            </a>
+            <a href="/test-url/" class="status-tag" title="title" id="my-status">
+            </a>
+        """
+
+        self.assertHTMLEqual(expected, Template(template).render(Context()))
+
+    def test_render_as_fragment(self):
+        template = """
+            {% load wagtailadmin_tags i18n %}
+            {% fragment as var %}
+                {% trans "title" as trans_title %}
+                {% trans "hidden label" as trans_hidden_label %}
+                {% status "live" url="/test-url/" title=trans_title hidden_label=trans_hidden_label classname="primary" attrs='target="_blank" rel="noreferrer"' %}
+                {% status "live" hidden_label=trans_hidden_label classname="primary" attrs="data-example='present'" %}
+            {% endfragment %}
+            {{var}}
+        """
+
+        expected = """
+            <a href="/test-url/" class="status-tag primary" title="title" target="_blank" rel="noreferrer">
+                <span class="visuallyhidden">hidden label</span>
+                live
+            </a>
+            <span class="status-tag primary" data-example='present'>
+                <span class="visuallyhidden">hidden label</span>
+                live
+            </span>
+        """
+
+        self.assertHTMLEqual(expected, Template(template).render(Context()))
